--- a/src/main/html/react_dropdown.html
+++ b/src/main/html/react_dropdown.html
@@ -24,19 +24,15 @@
 				box-sizing: border-box;
 				cursor: pointer;
 				float: left;
-				height: 40px;
 				width: 100%;
 			}
 			div.dropdown-container > div.dropdown-display > * {
 				display: inline-block;
 				float: left;
-				height: 100%;
-				height: 40px;
-				line-height: 40px !important;
+				line-height: 1.6rem !important;
 				vertical-align: middle;
 			}
 			div.dropdown-container > div.dropdown-display > i {
-				font-size: 1.125em;
 				font-weight: bold;
 				margin-left: -24px;
 				padding-right: 10px;
@@ -46,7 +42,6 @@
 			}
 			div.dropdown-container > div.dropdown-display > span {
 				box-sizing: border-box;
-				font-size: 14px;
 				padding-left: 10px;
 				padding-right: 34px;
 				position: relative;
@@ -72,7 +67,6 @@
 				border-top: none;
 				box-sizing: border-box;
 				float: left;
-				font-size: 14px;
 				padding: 0 10px;
 				width: 100%;
 			}
@@ -85,8 +79,7 @@
 			}
 			div.dropdown-container > div.dropdown-list > div > div > * {
 				display: inline-block;
-				height: 40px;
-				line-height: 40px !important;
+				line-height: 1.6rem !important;
 				vertical-align: middle;
 			}
 			div.dropdown-container > div.dropdown-list > div > div > i {
