--- a/src/main/html/block-fill.html
+++ b/src/main/html/block-fill.html
@@ -98,6 +98,7 @@ Promise.resolve({})
 		// clearInterval(interval);
 		renderAgain(view, vm => null);
 	};
-});
+})
+.catch(console.error);
 	</script>
 </html>
