--- a/src/main/html/five-in-a-row-hex.html
+++ b/src/main/html/five-in-a-row-hex.html
@@ -175,6 +175,7 @@ Promise
 	for (let [k, v] of Object.entries(game.handle)) handle[k] = v;
 
 	game.vw.init();
-});
+})
+.catch(console.error);
 	</script>
 </html>
