--- a/src/main/html/five-in-a-row-hex.html
+++ b/src/main/html/five-in-a-row-hex.html
@@ -53,10 +53,8 @@ let nStoneTypes = +colorsp || 5;
 
 Promise
 .all(['frp.js', 'pq.js',].map(loadsrcscript))
-.then(ns => evalscript('five-in-a-row.js').then(m => ({ ...ns, fiveinarow: m, })))
-.then(ns => evalscript('fun.js').then(m => ({ ...ns, fun: m, })))
-.then(ns => evalscript('render.js').then(m => ({ ...ns, render: m, })))
-.then(({ fiveinarow, fun: { rand, range, }, render: { rd, renderAgain, }, }) => {
+.then(addevalscripts(['five-in-a-row', 'fun', 'render',]))
+.then(({ ['five-in-a-row']: fiveinarow, fun: { rand, range, }, render: { rd, renderAgain, }, }) => {
 	let cc = ((sizex, sizey) => {
 		let startx = 0, endx = startx + sizex;
 
