--- a/src/main/html/five-in-a-row-triangle.html
+++ b/src/main/html/five-in-a-row-triangle.html
@@ -20,10 +20,8 @@ file:///home/ywsing/suite/src/main/html/five-in-a-row-triangle.html
 
 Promise
 .all(['frp.js', 'pq.js',].map(loadsrcscript))
-.then(ns => evalscript('five-in-a-row.js').then(m => ({ ...ns, fiveinarow: m, })))
-.then(ns => evalscript('fun.js').then(m => ({ ...ns, fun: m, })))
-.then(ns => evalscript('render.js').then(m => ({ ...ns, render: m, })))
-.then(({ fiveinarow, fun: { rand, range, }, render: { rd, renderAgain, }, }) => {
+.then(addevalscripts(['five-in-a-row', 'fun', 'render',]))
+.then(({ ['five-in-a-row']: fiveinarow, fun: { rand, range, }, render: { rd, renderAgain, }, }) => {
     let view = rd.parse({ ...fiveinarow, }, `
         <span style='display: flex; flex-direction:column; font-size: 36px;'>
             <rd_map v='vm.board'>
