--- a/src/main/html/react_dropdown.html
+++ b/src/main/html/react_dropdown.html
@@ -154,10 +154,8 @@
 						selectByIndex(Math.max(0, index - 1));
 					else if (e.which === 40) // down
 						selectByIndex(Math.min(list.length - 1, index + 1));
-					else {
-						let c = String.fromCharCode(e.which);
-						if (/^[0-9a-zA-Z]$/.test(c)) selectByFilter(filter + c);
-					}
+					else if (32 <= e.which && e.which < 128)
+						selectByFilter(filter + String.fromCharCode(e.which));
 				};
 
 				return (
