--- a/src/main/html/react_dropdown.html
+++ b/src/main/html/react_dropdown.html
@@ -13,7 +13,6 @@
 				width: 100%;
 			}
 			div.dropdown-container {
-				display: block;
 				float: left;
 				margin-top: 20px;
 				width: 250px;
@@ -27,7 +26,6 @@
 				width: 100%;
 			}
 			div.dropdown-container > div.dropdown-display > * {
-				display: inline-block;
 				float: left;
 				line-height: 1.6rem !important;
 				vertical-align: middle;
@@ -77,7 +75,6 @@
 				color: white;
 			}
 			div.dropdown-container > div.dropdown-list > div > div > * {
-				display: inline-block;
 				line-height: 1.6rem !important;
 				vertical-align: middle;
 			}
@@ -182,6 +179,7 @@
 				{ name: 'Red', hex: '#F21B1B' },
 				{ name: 'Blue', hex: '#1B66F2' },
 				{ name: 'Green', hex: '#07BA16' },
+				{ name: 'This page demonstrates the use of a dropdown control built with React JS.', hex: '#808080' },
 			];
 
 			let selected_ = colors[0];
@@ -194,7 +192,6 @@
 
 	<body>
 		<h1>Dropdown Demo</h1>
-		<span>This page demonstrates the use of a dropdown control built with React JS.</span>
 		<div id='container'></div>
 	</body>
 </html>
