--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -142,30 +142,28 @@ evalscripts(['fun', 'render',])
 		`<div class='{ vm.count !== 0 ? "overlay" : "" }'></div>`,
 	);
 
-	let componentLoginNotificationOverlay = vm => {
-		let co = componentOverlay(vm);
-		let cn = componentNotification(vm);
-		let cl = componentLogin(co.enable, co.disable, cn.setMessage)(vm);
-		return rd.span_component(
-			vm => true,
-			({}) => ({}),
-			({}) => ({ cl, cn, co, }),
-			`
-				<span>
-					<rd_component v='vm_ => env.cl' />
-					<rd_component v='vm_ => env.cn' />
-					<rd_component v='vm_ => env.co' />
-				</span>
-			`
-		)(vm);
-	};
-
 	let view0 = rd.parse({
-		componentLoginNotificationOverlay,
+		componentLogin,
+		componentNotification,
+		componentOverlay,
 	}, `
 		<span style='font-family: sans-serif;'>
 			<rd_map v='true'>
-				<rd_component v='env.componentLoginNotificationOverlay' />
+				<rd_component v=#{
+					let co = env.componentOverlay(vm);
+					let cn = env.componentNotification(vm);
+					let cl = env.componentLogin(co.enable, co.disable, cn.setMessage)(vm);
+					return rd.span_component(
+						vm => true,
+						({}) => ({}),
+						({}) => ({ cl, cn, co, }),
+						{<span>
+							<rd_component v='vm_ => env.cl' />
+							<rd_component v='vm_ => env.cn' />
+							<rd_component v='vm_ => env.co' />
+						</span>}
+					)(vm);
+				} />
 			</rd_map>
 
 			<rd_map v='vm.message'>
