--- a/src/main/html/react_dropdown.html
+++ b/src/main/html/react_dropdown.html
@@ -68,10 +68,10 @@
 				width: 100%;
 			}
 			div.dropdown-container > div.dropdown-list > div > div:hover {
-				background: #F0F0F0;
+				background: #f0f0f0;
 			}
 			div.dropdown-container > div.dropdown-list > div > div.selected {
-				background: #E0E0E0;
+				background: #e0e0e0;
 				color: white;
 			}
 			div.dropdown-container > div.dropdown-list > div > div > * {
