--- a/src/main/html/five-in-a-row-hex.html
+++ b/src/main/html/five-in-a-row-hex.html
@@ -169,10 +169,10 @@ Promise
 		</span>
 	`);
 
-	let game = fiveinarow.game(cc, view);
-	for (let [k, v] of Object.entries(game.handle)) handle[k] = v;
+	let gameInstance = fiveinarow.game(cc, view);
+	for (let [k, v] of Object.entries(gameInstance.handle)) handle[k] = v;
 
-	game.vw.init();
+	gameInstance.vw.init();
 })
 .catch(console.error);
 	</script>
