--- a/src/main/html/five-in-a-row-hex.html
+++ b/src/main/html/five-in-a-row-hex.html
@@ -169,7 +169,7 @@ Promise
 		</span>
 	`);
 
-	let gameInstance = fiveinarow.game(cc, view);
+	let gameInstance = fiveinarow.gamef(cc, view);
 	for (let [k, v] of Object.entries(gameInstance.handle)) handle[k] = v;
 
 	gameInstance.vw.init();
