--- a/src/main/html/react_dropdown.html
+++ b/src/main/html/react_dropdown.html
@@ -19,7 +19,7 @@
 			}
 			div.dropdown-container > div.dropdown-display {
 				background: white;
-				border: solid 1px #dddddd;
+				border: solid 1px #DDDDDD;
 				box-sizing: border-box;
 				cursor: pointer;
 				float: left;
@@ -60,7 +60,7 @@
 				z-index: 2;
 			}
 			div.dropdown-container > div.dropdown-list > div > div {
-				border: solid 1px #dddddd;
+				border: solid 1px #DDDDDD;
 				border-top: none;
 				box-sizing: border-box;
 				float: left;
@@ -68,7 +68,7 @@
 				width: 100%;
 			}
 			div.dropdown-container > div.dropdown-list > div > div:hover {
-				background: #f0f0f0;
+				background: #F0F0F0;
 			}
 			div.dropdown-container > div.dropdown-list > div > div.selected {
 				background: #e0e0e0;
