--- a/src/main/html/ball.html
+++ b/src/main/html/ball.html
@@ -13,9 +13,7 @@
 'use strict';
 
 evalscripts(['frp', 'fun'])
-.then(ns => {
-	let { frp, fun: { rand, range, read, }, } = ns;
-
+.then(({ frp, fun: { rand, range, read, }, }) => {
 	let width = window.innerWidth;
 	let height = window.innerHeight;
 
