--- a/src/main/html/block-fill.html
+++ b/src/main/html/block-fill.html
@@ -14,9 +14,7 @@ file:///home/ywsing/suite/src/main/html/block-fill.html
 'use strict';
 
 evalscripts(['frp', 'fun', 'render'])
-.then(ns => {
-	let { frp, fun: { range, }, render: { rd, renderAgain, }, } = ns;
-
+.then(({ frp, fun: { range, }, render: { rd, renderAgain, }, }) => {
 	globalThis.handle = (() => {
 		let vmsetcell = (vmt0, vmc1) =>  {
 			let vmr0 = vmt0[vmc1.x];
