--- a/src/main/html/render_switch.html
+++ b/src/main/html/render_switch.html
@@ -14,9 +14,7 @@ file:///home/ywsing/suite/src/main/html/render.html
 'use strict';
 
 evalscripts(['fun', 'render',])
-.then(ns => {
-	let { fun: { lens, read, }, render: { rd, renderAgain, }, } = ns;
-
+.then(({ fun: { lens, read, }, render: { rd, renderAgain, }, }) => {
 	let view = rd.parse({}, `
 		<span>
 			<rd_switch>
