--- a/src/main/html/wdp.html
+++ b/src/main/html/wdp.html
@@ -57,7 +57,7 @@ let cellBackground = '#DDDDDD';
 let cellSelected = '#555555';
 let palette = ['#D1F2A5', '#EFFAB4', '#FFC48C', '#FF9F80', '#F56991',];
 let ownerColors = ['#D1F2A5', '#EFFAB4', '#FFC48C', '#FF9F80', '#F56991',];
-ownerColors[-1] = '#4444DD';
+ownerColors[-1] = '#4444DD'; // water
 
 let icons = [ '', '🐵', '💂', '🍋', '🌲', '💖', '🐬', '🍊', '🍇', '💮', '✴️', ];
 icons[castle] = '🏰';
