--- a/src/main/html/edit.html
+++ b/src/main/html/edit.html
@@ -24,12 +24,12 @@ file:///home/ywsing/suite/src/main/html/edit.html
 				<table border=1 style='border-collapse: collapse;'>
 					<tbody>
 						<tr>
-							<td>x</td>
-							<td>y</td>
+							<td style='padding: 2px 4px;'>x</td>
+							<td style='padding: 2px 4px;'>y</td>
 						</tr>
 						<tr>
-							<td>1.2</td>
-							<td>2.4</td>
+							<td style='padding: 2px 4px;'>1.2</td>
+							<td style='padding: 2px 4px;'>2.4</td>
 						</tr>
 					</tbody>
 				</table>
