--- a/src/main/html/edit.html
+++ b/src/main/html/edit.html
@@ -9,32 +9,35 @@ file:///home/ywsing/suite/src/main/html/edit.html
 
 		<script type='text/javascript'>
 			let doc_, defaultText = `
-			<p>Lorem ipsum</p>
-			<p>
-				<div style='display: grid; grid-template-columns: min-content min-content;'>
-					<div style='border-top: 1px solid grey; padding: 4px;'>x</div>
-					<div style='border-top: 1px solid grey; padding: 4px;'>y</div>
-					<div style='border-top: 1px solid grey; padding: 4px;'>1.2</div>
-					<div style='border-top: 1px solid grey; padding: 4px;'>2.4</div>
-					<div style='border-top: 1px solid grey; padding: 4px;'/></div>
-					<div style='border-top: 1px solid grey; padding: 4px;'/></div>
-				</div>
-			</p>
-			<p>
-				<table border=1 style='border-collapse: collapse;'>
-					<tbody>
-						<tr>
-							<td style='padding: 2px 4px;'>x</td>
-							<td style='padding: 2px 4px;'>y</td>
-						</tr>
-						<tr>
-							<td style='padding: 2px 4px;'>1.2</td>
-							<td style='padding: 2px 4px;'>2.4</td>
-						</tr>
-					</tbody>
-				</table>
-			</p>
-			<p>Lorem ipsum</p>
+			<div>
+				<p>Lorem ipsum</p>
+				<p>
+					<div style='display: grid; grid-template-columns: min-content min-content;'>
+						<div style='border-top: 1px solid grey; padding: 4px;'>x</div>
+						<div style='border-top: 1px solid grey; padding: 4px;'>y</div>
+						<div style='border-top: 1px solid grey; padding: 4px;'>1.2</div>
+						<div style='border-top: 1px solid grey; padding: 4px;'>2.4</div>
+						<div style='border-top: 1px solid grey; padding: 4px;'/></div>
+						<div style='border-top: 1px solid grey; padding: 4px;'/></div>
+					</div>
+				</p>
+				<p>Lorem ipsum</p>
+				<p>
+					<table border=1 style='border-collapse: collapse;'>
+						<tbody>
+							<tr>
+								<td style='padding: 2px 4px;'>x</td>
+								<td style='padding: 2px 4px;'>y</td>
+							</tr>
+							<tr>
+								<td style='padding: 2px 4px;'>1.2</td>
+								<td style='padding: 2px 4px;'>2.4</td>
+							</tr>
+						</tbody>
+					</table>
+				</p>
+				<p>Lorem ipsum</p>
+			</div>
 			`;
 
 			let initDocument = () => {
