--- a/src/main/html/edit.html
+++ b/src/main/html/edit.html
@@ -17,8 +17,8 @@ file:///home/ywsing/suite/src/main/html/edit.html
 						<div style='border-top: 1px solid grey; padding: 4px;'>y</div>
 						<div style='border-top: 1px solid grey; padding: 4px;'>1.2</div>
 						<div style='border-top: 1px solid grey; padding: 4px;'>2.4</div>
-						<div style='border-top: 1px solid grey; padding: 4px;'/></div>
-						<div style='border-top: 1px solid grey; padding: 4px;'/></div>
+						<div style='border-top: 1px solid grey; padding: 4px;'></div>
+						<div style='border-top: 1px solid grey; padding: 4px;'></div>
 					</div>
 				</p>
 				<p>Lorem ipsum</p>
